-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.0
-
None
-
Tested on OSX 10.11.3 2.9 GHz Intel Core i5
If specifying line-height in the style tag when setting html on a QTextEdit, the property is not correctly respected and the lines all overlap each other (see attached)
This is a common use case e.g. when pasting text from a web browser (e.g. a google doc for instance)
To reproduce:
#include <QApplication>
#include <QtWidgets>
int main(int argc, char *argv[])
{
QApplication app(argc, argv);
QTextEdit x;
x.show();
QByteArray b("<meta charset=\"utf-8\"><p style=\"line-height:1.38;\">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in volupfftate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>");
x.setHtml(b);
app.exec();
}
- is duplicated by
-
QTBUG-58874 CSS style line-height not handled properly when inserting HTML to QTextEdit
-
- Closed
-
-
QTBUG-60242 Css: Unitless "line-height" value is used incorrectly
-
- Closed
-
- is required for
-
QTCREATORBUG-17683 [Reg 4.2.0->4.2.1] Help from Qt4.8.7 is not displayed properly
-
- Closed
-
- replaces
-
QTCREATORBUG-18779 Font overlap of the help of Qt 4.8.7 from Qt Creator 4.2.0 and later
-
- Closed
-