src/gui/text/qtexthtmlparser_p.h
@@ -173,6 +173,7 @@ struct QTextHtmlParserNode {
     uint cssFloat : 2;
     uint hasOwnListStyle : 1;
     uint hasOwnLineHeightType : 1;
+    uint hasLineHeightMultiplier : 1;
     uint hasCssListIndent : 1;
     uint isEmptyParagraph : 1;
     uint isTextFrame : 1;
